--- a/main2.html
+++ b/main2.html
@@ -1,20 +1,7 @@
-<!-- <!DOCTYPE html>
-
-<html>
-	<head>
-		<script type="text/javascript" src="jquery.js"></script>
-	</head>
-	<body>
-		<button id="update">Update Songs</button>
-
-	<script type="text/javascript" src="main.js"></script>
-	</body>
-</html> -->
-
 <!doctype html>
 <html>
   <head>
-    <title>Gmail API demo</title>
+    <title>Spotify Playlist Master</title>
     <meta charset="UTF-8">
 
     <link rel="stylesheet" href="bootstrap-3.3.5/dist/css/bootstrap.min.css">
@@ -29,27 +16,21 @@
       }
 
       html, body {
-      	height: 600px;
-      	width: 600px;
+        height: 600px;
+        width: 600px;
       }
 
       .container {
-      	max-width: 100%;
-      	max-height: 100%;
-      }
-
-      .hidden {
-      	display: inline-block !important;
+        max-width: 100%;
+        max-height: 100%;
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <h1>Gmail API demo</h1>
+      <h1>Spotify Playlist Master</h1>
 
       <button id="authorize-button" class="btn btn-primary hidden">Authorize</button>
-
-      <button id="follow-artists" class="btn btn-primary hidden">Follow Artists</button>
 
       <table class="table table-striped table-inbox hidden">
         <thead>
@@ -65,11 +46,8 @@
 
     <script src="jquery.js"></script>
     <script src="bootstrap-3.3.5/dist/js/bootstrap.min.js"></script>
-  
-	<script type="text/javascript" src="spotify-web-api.js"></script>
-	<script type="text/javascript" src="main.js"></script>
-<!--   // <script type="text/javascript" src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script> -->
-<!--     // <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script> -->
-  
+
+    <script type="text/javascript" src="main2.js"></script>
+    <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
   </body>
 </html>
